# GE_gamesave_system

./: .gitignore  CMakeLists.txt
SaveSystem/: CMakeLists.txt  SaveNode.cpp  SaveNode.h  SaveSystem.cpp  SaveSystem.h  Serializable.h
SaveSystemTests/: CMakeLists.txt  Main.cpp  NodeConstructorTests.cpp  NodeDataAdditionTests.cpp  NodeLoadTests.cpp  NodePollTests.cpp  NodeSavingTests.cpp  SaveSystemGeneralTests.cpp  SaveSystemLoadTests.cpp  SaveSystemSaveTests.cpp
UnitTest++/lib/: UnitTest++.lib  UnitTest++d.lib
